[tool.poetry]
name = "iso8601"
version = "1.0.0-alpha.0"
description = "Simple module to parse ISO 8601 dates"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
pylint = "^2.6.0"
isort = "^5.7.0"
tox = "^3.21.4"
pytest = "^6.2.2"
hypothesis = "^6.1.1"
pytz = "^2021.1"
pre-commit = "^2.13.0"
nox = "^2021.6.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
