[tool.poetry]
name = "iso8601"
version = "1.0.0"
description = "Simple module to parse ISO 8601 dates"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/micktwomey/pyiso8601"
repository = "https://github.com/micktwomey/pyiso8601"
documentation = "https://pyiso8601.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.10b0"
pylint = "^2.6.0"
isort = "^5.10.0"
pytest = "^6.2.2"
hypothesis = "^6.1.1"
pytz = "^2021.1"
pre-commit = "^2.15.0"
nox = "^2021.10.1"
Sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
