[tool.poetry]
name = "iso8601"
version = "1.1.0"
description = "Simple module to parse ISO 8601 dates"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/micktwomey/pyiso8601"
repository = "https://github.com/micktwomey/pyiso8601"
documentation = "https://pyiso8601.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pytest = { version = "*", optional = true }
hypothesis = { version = "*", optional = true }
pytz = { version = "*", optional = true }
Sphinx = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
pylint = "*"
isort = "*"
pytest = "*"
hypothesis = "*"
pytz = "*"
pre-commit = "*"
nox = "*"
Sphinx = "*"

[tool.poetry.extras]
docs = ["Sphinx"]
test = ["pytest", "hypothesis", "pytz"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
